--- a/index.html
+++ b/index.html
@@ -1,42 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Meta tags for Search Engines-->
-    <meta name="description" content="Love Running. Club for Runners in Dublin, Ireland. Urban running, Dublin docklands.">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta
+      name="description"
+      content="Love Running. Club for Runners in Dublin, Ireland. Urban running, Dublin docklands."
+    />
+    <meta
+      name="keywords"
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
+    />
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
     <!--Styleshet-->
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <!--Header-->
     <header>
-            <a href="index.html">
-                <h1 id="logo">Love Running</h1>
-            </a>
-            <input type="checkbox" name="nav-toggle" id="nav-toggle">
-            <label for="nav-toggle" class="nav-toggle-label">X</label>
-            <nav>
-                <ul id="menu">
-                    <li><a href="" class="active">Home</a></li>
-                    <li><a href="">Gallery</a></li>
-                    <li><a href="">Sign Up</a></li>
-                </ul>
-            </nav>
+      <a href="index.html">
+        <h1 id="logo">Love Running</h1>
+      </a>
+      <input type="checkbox" name="nav-toggle" id="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+      <nav>
+        <ul id="menu">
+          <li><a href="" class="active">Home</a></li>
+          <li><a href="">Gallery</a></li>
+          <li><a href="">Sign Up</a></li>
+        </ul>
+      </nav>
     </header>
     <!--Main-->
     <main>Main Content</main>
     <!--Footer-->
-    <footer>Footer</footer>
-</body>
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facbook page (opens in a new tab)"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://twitter.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Twitter page (opens in a new tab)"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our YouTube channel (opens in a new tab)"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
 
+    <!-- Font awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/dd96fe519d.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
