--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,9 @@
         </nav>
     </header>
     <!--Main-->
-    <main>Main Content</main>
+    <main>
+        <section id="hero"></section>
+    </main>
     <!--Footer-->
     <footer>
         <ul id="social-networks">
