--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
       </nav>
     </header>
     <!--Main-->
-    <main>Main Content</main>
+    <main>
+        <section id="hero"></section>
+    </main>
     <!--Footer-->
     <footer>
       <ul id="social-networks">
