--- a/index.html
+++ b/index.html
@@ -55,10 +55,17 @@
         </ul>
       </nav>
     </header>
+    
     <!--Main-->
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+            </div>
+        </section>
     </main>
+
     <!--Footer-->
     <footer>
       <ul id="social-networks">
