--- a/index.html
+++ b/index.html
@@ -102,9 +102,50 @@
                 </div>
             </div>
         </section>
+        <!-- Meetups Section -->
+        <section>
+            <h2>Meet-up Times</h2>
+            <div id="times">
+                <div>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <p>Monday</p>
+                    <p>5k</p>
+                    <p>The Illegible Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Wednesday</p>
+                    <p>10k</p>
+                    <p>The Phoenix Park</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <p>Friday</p>
+                    <p>5k</p>
+                    <p>The Illegible Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Saturday</p>
+                    <p>10k</p>
+                    <p>The Phoenix Park</p>
+                    <p>9:30</p>
+                </div>
+                <div>
+                    <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
+                    <p>Sunday</p>
+                    <p>0k</p>
+                    <p>The Illegible Hotel</p>
+                    <p>11:30</p>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <!--Footer-->
+    <!-- Footer -->
     <footer>
       <ul id="social-networks">
         <li>
