--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
         <!-- Meetups Section -->
         <section>
-            <h2>Meet-up Times</h2>
+            <h2 class="hidden-heading">Meet-up Times</h2>
             <div id="times">
                 <div>
                     <h3>Urban <i class="fa-solid fa-city"></i></h3>
