--- a/signup.html
+++ b/signup.html
@@ -35,10 +35,44 @@
             </ul>
         </nav>
     </header>
+    
     <!--Main-->
     <main>
-        <section id="hero"></section>
+        <section id="signup">
+
+            <form action="https://formdump.codeinstitute.net" method="post" id="signup-form">
+                <h2><i class="fa-solid fa-heart-pulse"></i> Let's Get you signed up!</h2>
+                <label for="first_name">First Name</label>
+                <input type="text" id="first_name" name="first_name" class="text-input" required>
+                <br>
+                <label for="last_name">Last Name</label>
+                <input type="text" id="last_name" name="last_name" class="text-input" required>                
+                <br>
+                <label for="email_address">Email Address</label>
+                <input type="text" id="email_address" name="email_address" class="text-input" required>                
+                <br>
+
+                <div class="radio_buttons">
+                    <div>
+                        <input type="radio" name="running_preference" id="road" selected>
+                        <label for="road">Road</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="running_preference" id="trail">
+                        <label for="trail">Trail</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="running_preference" id="both">
+                        <label for="both">Both</label>
+                    </div>
+                </div>
+
+                <button type="submit" class="join-button" id="join-button">Let's Run!</button>
+                
+            </form>
+        </section>
     </main>
+
     <!--Footer-->
     <footer>
         <ul id="social-networks">
