style signup form and make responsive

--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
             </ul>
         </nav>
     </header>
-    
+
     <!--Main-->
     <main>
         <section id="signup">
@@ -52,7 +52,7 @@
                 <input type="text" id="email_address" name="email_address" class="text-input" required>                
                 <br>
 
-                <div class="radio_buttons">
+                <div id="radio_buttons">
                     <div>
                         <input type="radio" name="running_preference" id="road" selected>
                         <label for="road">Road</label>
