--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for Search Engines-->
     <meta
       name="description"
-      content="Love Running. Club for Runners in Dublin, Ireland. Urban running, Dublin docklands."
-    />
+      content="Love Running. Club for Runners in Dublin, Ireland. Urban running, Dublin docklands.">
     <meta
       name="keywords"
-      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
-    />
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
+      href="assets/favicon/apple-touch-icon.png">
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
+      href="assets/favicon/favicon-32x32.png">
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
+      href="assets/favicon/favicon-16x16.png">
     <!--Styleshet-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
   <body>
@@ -43,7 +38,7 @@
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
       </a>
-      <input type="checkbox" name="nav-toggle" id="nav-toggle" />
+      <input type="checkbox" name="nav-toggle" id="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
       ></label>
