--- a/index.html
+++ b/index.html
@@ -1,54 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for Search Engines-->
-    <meta
-      name="description"
-      content="Love Running. Club for Runners in Dublin, Ireland. Urban running, Dublin docklands.">
-    <meta
-      name="keywords"
-      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta name="description"
+        content="Love Running. Club for Runners in Dublin, Ireland. Urban running, Dublin docklands.">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png">
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/favicon/favicon-32x32.png">
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!--Styleshet-->
     <link rel="stylesheet" href="assets/css/style.css">
-  </head>
+</head>
 
-  <body>
+<body>
     <!--Header-->
     <header>
-      <a href="index.html">
-        <h1 id="logo">Love Running</h1>
-      </a>
-      <input type="checkbox" name="nav-toggle" id="nav-toggle">
-      <label for="nav-toggle" class="nav-toggle-label"
-        ><i class="fa-solid fa-bars"></i
-      ></label>
-      <nav>
-        <ul id="menu">
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="signup.html">Sign Up</a></li>
-        </ul>
-      </nav>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+        <input type="checkbox" name="nav-toggle" id="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!--Main-->
@@ -60,7 +45,7 @@
                 <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
-        
+
         <!-- Reasons to Join -->
         <section id="reasons">
             <h2>Why Love Running with Us?</h2>
@@ -69,8 +54,9 @@
                     <div>
                         <h3>FEEL HEALTHY <i class="fa-solid fa-heart-pulse"></i></h3>
                         <hr>
-                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns
-                        calories and can build strength.</p>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                            health. Plus, it burns
+                            calories and can build strength.</p>
                     </div>
                     <div>
                         <h3>FEEL STRONG <i class="fa-solid fa-dumbbell"></i></h3>
@@ -82,14 +68,16 @@
                     <div>
                         <h3>FEEL FREE <i class="fa-brands fa-fly"></i></h3>
                         <hr>
-                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic,
-                        more awake and, yes, happier.</p>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins
+                            make you more energetic,
+                            more awake and, yes, happier.</p>
                     </div>
                     <div>
                         <h3>GET SOCIAL <i class="fa-solid fa-earth-europe"></i></h3>
                         <hr>
-                        <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or
-                        low mood, and inspire you to try new events.</p>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull
+                            you out of a running funk or
+                            low mood, and inspire you to try new events.</p>
                     </div>
                 </div>
                 <div id="benefits-image">
@@ -142,50 +130,29 @@
 
     <!-- Footer -->
     <footer>
-      <ul id="social-networks">
-        <li>
-          <a
-            href="https://facebook.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Visit our Facbook page (opens in a new tab)"
-            ><i class="fa-brands fa-facebook"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://twitter.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Visit our Twitter page (opens in a new tab)"
-            ><i class="fa-brands fa-x-twitter"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://youtube.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Visit our YouTube channel (opens in a new tab)"
-            ><i class="fa-brands fa-youtube"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://instagram.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Visit our Instagram page (opens in a new tab)"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-        </li>
-      </ul>
+        <ul id="social-networks">
+            <li>
+                <a href="https://facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facbook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <!-- Font awesome kit -->
-    <script
-      src="https://kit.fontawesome.com/dd96fe519d.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://kit.fontawesome.com/dd96fe519d.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
