--- a/signup.html
+++ b/signup.html
@@ -2,21 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for Search Engines-->
     <meta name="description"
-        content="Love Running. Club for Runners in Dublin, Ireland. Urban running, Dublin docklands." />
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise" />
+        content="Love Running. Club for Runners in Dublin, Ireland. Urban running, Dublin docklands.">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!--Styleshet-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
-        <input type="checkbox" name="nav-toggle" id="nav-toggle" />
+        <input type="checkbox" name="nav-toggle" id="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
@@ -46,15 +46,15 @@
                 <input type="text" id="first_name" name="first_name" class="text-input" required>
                 <br>
                 <label for="last_name">Last Name</label>
-                <input type="text" id="last_name" name="last_name" class="text-input" required>                
+                <input type="text" id="last_name" name="last_name" class="text-input" required>
                 <br>
                 <label for="email_address">Email Address</label>
-                <input type="text" id="email_address" name="email_address" class="text-input" required>                
+                <input type="text" id="email_address" name="email_address" class="text-input" required>
                 <br>
 
                 <div id="radio_buttons">
                     <div>
-                        <input type="radio" name="running_preference" id="road" selected>
+                        <input type="radio" name="running_preference" id="road" checked>
                         <label for="road">Road</label>
                     </div>
                     <div>
@@ -68,7 +68,7 @@
                 </div>
 
                 <button type="submit" class="join-button" id="join-button">Let's Run!</button>
-                
+
             </form>
         </section>
     </main>
